fix mobile horizontal scrolling

--- a/static/main.css
+++ b/static/main.css
@@ -38,6 +38,10 @@
   background-color: var(--highlight-secondary);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
